--- a/requirements.txt
+++ b/requirements.txt
@@ -1,83 +1,13 @@
-airdrop-ng==1.1
-airgraph-ng==1.1
-apparmor==3.1.4
-arandr==0.1.11
-argcomplete==3.1.0
-asciinema==2.2.0
-attrs==22.2.0
-autocommand==2.2.2
-beautifulsoup4==4.12.2
-btrfsutil==6.3
+asgiref==3.7.2
 certifi==2023.5.7
-cffi==1.15.1
-chardet==5.1.0
-click==8.1.3
-configobj==5.0.8
-cryptography==40.0.2
-cupshelpers==1.0
-dbus-python==1.3.2
-distro==1.8.0
-docopt==0.6.2
-evdev==1.6.1
-fastjsonschema==2.17.1
-gunicorn==20.1.0
-httplib2==0.22.0
+charset-normalizer==3.1.0
+cloudinary==1.33.0
+Django==4.2.2
+django-cloudinary-storage==0.3.0
 idna==3.4
-inflect==6.0.4
-jaraco.context==4.3.0
-jaraco.functools==3.7.0
-jaraco.text==3.11.1
-keyutils==0.6
-Levenshtein==0.21.0
-LibAppArmor==3.1.4
-lxml==4.9.2
-moddb==0.8.1
-more-itertools==9.1.0
-netsnmp-python==1.0a1
-nftables==0.1
-numpy==1.24.3
-ordered-set==4.1.0
-packaging==23.1
+mysqlclient==2.1.1
 Pillow==9.5.0
-pipx==1.2.0
-platformdirs==3.5.1
-ply==3.11
-psutil==5.9.5
-pwquality==1.4.5
-pycairo==1.23.0
-pycparser==2.21
-pycups==2.0.1
-pycurl==7.45.2
-pydantic==1.10.8
-PyGObject==3.44.1
-pyinotify==0.9.6
-pyparsing==3.0.9
-pyparted==3.12.0
-pyrate-limiter==2.10.0
-python-distutils-extra==2.39
-pyxdg==0.28
-PyYAML==6.0
-QTermWidget==1.3.0
-rapidfuzz==3.0.0
-Reflector==2021.11.20.2.41.3
-requests==2.28.2
-scapy==2.5.0
-setproctitle==1.3.2
+requests==2.31.0
 six==1.16.0
-smbus==1.1
-soupsieve==2.4.1
-speedtest-cli==2.1.4b1
-tomli==2.0.1
-toolz==0.12.0
-trove-classifiers==2023.5.25
-typing_extensions==4.6.3
-udiskie==2.4.2
-ulauncher==5.15.2
-urllib3==1.26.15
-userpath==1.8.0
-validate==5.0.8
-validate-pyproject==0.13.post1.dev0+gb752273.d20230520
-variety==0.8.10
-vboxapi==1.0
-websocket-client==1.5.2
-whitenoise==6.5.0
+sqlparse==0.4.4
+urllib3==1.26.16
