--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ charset-normalizer==3.1.0
 cloudinary==1.33.0
 Django==4.2.2
 django-cloudinary-storage==0.3.0
+gunicorn==20.1.0
 idna==3.4
 mysqlclient==2.1.1
 Pillow==9.5.0
